--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -20,6 +20,7 @@ html,body{
   width: 100%;
   height: 100%;
   position: absolute;
+  background: rgba(255,255,255,0.5);
   top: 0;
   left: 0;
   display: flex;
@@ -42,10 +43,10 @@ html,body{
   white-space: nowrap;
   text-decoration: none;
   transition: transform 0.5s ease-in-out;
-  color:rgba(255,255,255,0.5);
+  color:rgba(60,60,60,0.7);
 }
 .video_dec_content a:hover{
   transform: scale(1.03);
-    color:rgba(255,255,255,0.8);
+    color:rgba(60,60,60,1);
 }
 
